# PAMSI

./: README.md
Pamsi_Macierze_lab0/tester/: input.txt  input.txt~
Pamsi_Macierze_lab0/tester/include/pamsi_tester/: #Tester.hpp#  Tester.hpp~
Pamsi_Macierze_lab0/tester/src/: main.cpp  main.cpp~
Projekt_1/: CMakeLists.txt
Projekt_1/include/: list.hh  map.hh  priorityqueue.hh  queue.hh  stack.hh
Projekt_1/src/: main.cpp
Projekt_2/: CMakeLists.txt
Projekt_2/include/: bubblesort.hh  heapsort.hh  mergesort.hh  quicksort.hh
Projekt_2/src/: main.cpp
Projekt_3/: CMakeLists.txt
Projekt_3/include/: lista.hh  macierz.hh  menu.hh
Projekt_3/src/: main.cpp
Projekt_4/: CMakeLists.txt  README.md
Projekt_4/include/: BoardManager.hpp  Coordinates.hpp  GameManager.hpp  GameOptionsManager.hpp  MinMaxManager.hpp  MyStdIn.hpp  SFML.hpp
Projekt_4/src/: BoardManager.cpp  Coordinates.cpp  GameManager.cpp  GameOptionsManager.cpp  Main.cpp  MinMaxManager.cpp  MyStdIn.cpp
